--- a/conda/blender/meta.yaml
+++ b/conda/blender/meta.yaml
@@ -81,6 +81,8 @@ requirements:
     - m2-patch # [win]
     - numpy >=1.22.3
     - python==3.10.0
+    - libgcc-ng # [unix]
+    - libstdcxx-ng # [unix]
   run:
     - numpy >=1.22.3
     - python >=3.10.0,<3.11.0
