--- a/conda/blender/meta.yaml
+++ b/conda/blender/meta.yaml
@@ -82,6 +82,7 @@ requirements:
     - libgcc-ng # [unix]
     - libstdcxx-ng # [unix]
     - m2-patch # [win]
+    - make # [unix]
     - numpy >=1.22.3
     - python==3.10.0
   run:
