--- a/conda/panda3d/meta.yaml
+++ b/conda/panda3d/meta.yaml
@@ -68,7 +68,11 @@ requirements:
     - bullet==3.17
     - cmake==3.22.1
     - conda==23.3.1
+    - gcc_linux-64 # [unix]
+    - gxx_linux-64 # [unix]
+    - libgcc-ng # [unix]
     - libogg # [unix]
+    - libstdcxx-ng # [unix]
     - libvorbis # [unix]
     - m2-gcc-libs # [win]
     - m2-p7zip # [win]
@@ -80,9 +84,6 @@ requirements:
     - python==3.10.0
     - zlib
   run:
-    - jpeg # [unix]
-    - libpng # [unix]
-    - libtiff # [unix]
     - python >=3.10.0,<3.11.0
     - vs2015_runtime # [win]
     - zlib # [unix]
