--- a/conda/panda3d/meta.yaml
+++ b/conda/panda3d/meta.yaml
@@ -75,6 +75,7 @@ requirements:
     - libstdcxx-ng # [unix]
     - libvorbis # [unix]
     - libx11-devel-cos6-x86_64 # [unix]
+    - libxrender-cos6-x86_64 # [unix]
     - m2-gcc-libs # [win]
     - m2-p7zip # [win]
     - m2-patch # [win]
