remove extra jobs, switch to blender python and sdl

--- a/jenkins-jobs/panda3d-extras.yml
+++ b/jenkins-jobs/panda3d-extras.yml
@@ -29,9 +29,9 @@
                 -DPANDA_BINARY_DIR=/root/jenkins/workspace/panda3d-lynx64/dist/panda3d/bin
                 -DPANDA_INCLUDE_DIR=/root/jenkins/workspace/panda3d-lynx64/dist/panda3d/include
                 -DPANDA_LIBRARY_DIR=/root/jenkins/workspace/panda3d-lynx64/dist/panda3d/lib
-                -DPYTHON_INCLUDE_DIR=/root/jenkins/workspace/python-lynx64/dist/python/include/python3.10
-                -DPYTHON_EXECUTABLE=/root/jenkins/workspace/python-lynx64/dist/python/bin/python3.10
-                -DPYTHON_LIBRARY=/root/jenkins/workspace/python-lynx64/dist/python/lib/libpython3.10.so.1.0
+                -DPYTHON_INCLUDE_DIR=/root/jenkins/workspace/blender-thirdparty-lynx64/python/include/python3.10
+                -DPYTHON_EXECUTABLE=/root/jenkins/workspace/blender-thirdparty-lynx64/python/bin/python3.10
+                -DPYTHON_LIBRARY=/root/jenkins/workspace/blender-thirdparty-lynx64/python/lib/libpython3.10.a
             build-tool-invocations:
                 - use-cmake: false
                   arguments: ''
