--- a/jenkins-jobs/blender.yml
+++ b/jenkins-jobs/blender.yml
@@ -26,11 +26,6 @@
                 -DCMAKE_BUILD_TYPE=Release \
                 -DCMAKE_INSTALL_PREFIX=/blender/lib/python3.10/site-packages \
                 -DLIBDIR=/root/jenkins/workspace/blender-thirdparty-lynx64 \
-                -DPYTHON_VERSION=3.10 \
-                -DPYTHON_INCLUDE_DIR=/root/jenkins/workspace/python-lynx64/dist/python/include \
-                -DPYTHON_LIBRARY_DIR=/root/jenkins/workspace/python-lynx64/dist/python/lib \
-                -DSDL_INCLUDE_DIR=/root/jenkins/workspace/sdl-lynx64/dist/sdl/include \
-                -DSDL_LIBRARY_DIR=/root/jenkins/workspace/sdl-lynx64/dist/sdl/lib \
                 -DWITH_AUDASPACE=ON \
                 -DWITH_CODEC_AVI=ON \
                 -DWITH_CODEC_FFMPEG=ON \
@@ -65,7 +60,7 @@
             make install DESTDIR=../dist/
             cd ..
 
-- job:
+- job-template:
     name: blender-winx64
     display-name: blender-winx64
     project-type: freestyle
