add dist clean job

--- a/jenkins-jobs/pipeline.yml
+++ b/jenkins-jobs/pipeline.yml
@@ -1,4 +1,102 @@
 - job:
+    name: dist-clean-lynx64
+    display-name: dist-clean-lynx64
+    project-type: freestyle
+    description: Clean up "dist" for all jobs.
+    node: linux
+    build-discarder:
+        daysToKeep: -1
+        numToKeep: 2
+        artifactDaysToKeep: -1
+        artifactNumToKeep: -1
+    builders:
+        - shell: |
+            JENKINS_WS=${JENKINS_HOME}/workspace
+
+            if [ -d ${JENKINS_WS}/blender-lynx64 ]; then
+                rm -Rf ${JENKINS_WS}/blender-lynx64/dist
+            fi
+
+            if [ -d ${JENKINS_WS}/bullet-lynx64 ]; then
+                rm -Rf ${JENKINS_WS}/bullet-lynx64/dist
+            fi
+
+            if [ -d ${JENKINS_WS}/ogg-lynx64 ]; then
+                rm -Rf ${JENKINS_WS}/ogg-lynx64/dist
+            fi
+
+            if [ -d ${JENKINS_WS}/vorbis-lynx64 ]; then
+                rm -Rf ${JENKINS_WS}/vorbis-lynx64/dist
+            fi
+
+            if [ -d ${JENKINS_WS}/sdl-lynx64 ]; then
+                rm -Rf ${JENKINS_WS}/sdl-lynx64/dist
+            fi
+
+            if [ -d ${JENKINS_WS}/python-lynx64 ]; then
+                rm -Rf ${JENKINS_WS}/python-lynx64/dist
+            fi
+
+            if [ -d ${JENKINS_WS}/panda3d-lynx64 ]; then
+                rm -Rf ${JENKINS_WS}/panda3d-lynx64/dist
+            fi
+
+            if [ -d ${JENKINS_WS}/panda3d-kphys-lynx64 ]; then
+                rm -Rf ${JENKINS_WS}/panda3d-kphys-lynx64/dist
+            fi
+
+            if [ -d ${JENKINS_WS}/panda3d-krender-lynx64 ]; then
+                rm -Rf ${JENKINS_WS}/panda3d-krender-lynx64/dist
+            fi
+
+            if [ -d ${JENKINS_WS}/sdk-lynx64 ]; then
+                rm -Rf ${JENKINS_WS}/sdk-lynx64/dist
+            fi
+
+- job:
+    name: dist-clean-winx64
+    display-name: dist-clean-winx64
+    project-type: freestyle
+    description: Clean up "dist" for all jobs.
+    node: windows
+    build-discarder:
+        daysToKeep: -1
+        numToKeep: 2
+        artifactDaysToKeep: -1
+        artifactNumToKeep: -1
+    builders:
+        - batch: |
+            set JENKINS_WS=D:\Jenkins\workspace
+
+            if exist %JENKINS_WS%\bullet-winx64 (
+                rd /S /Q %JENKINS_WS%\bullet-winx64\dist
+            )
+
+            if exist %JENKINS_WS%\sdl-winx64 (
+                rd /S /Q %JENKINS_WS%\sdl-winx64\dist
+            )
+
+            if exist %JENKINS_WS%\python-winx64 (
+                rd /S /Q %JENKINS_WS%\python-winx64\dist
+            )
+
+            if exist %JENKINS_WS%\panda3d-winx64 (
+                rd /S /Q %JENKINS_WS%\panda3d-winx64\dist
+            )
+
+            if exist %JENKINS_WS%\panda3d-kphys-winx64 (
+                rd /S /Q %JENKINS_WS%\panda3d-kphys-winx64\dist
+            )
+
+            if exist %JENKINS_WS%\panda3d-krender-winx64 (
+                rd /S /Q %JENKINS_WS%\panda3d-krender-winx64\dist
+            )
+
+            if exist %JENKINS_WS%\sdk-winx64 (
+                rd /S /Q %JENKINS_WS%\sdk-winx64\dist
+            )
+
+- job:
     name: pipeline-lynx64
     display-name: pipeline-lynx64
     project-type: pipeline
@@ -10,9 +108,13 @@
         artifactDaysToKeep: -1
         artifactNumToKeep: -1
     dsl: |
+        stage('dist-clean')      { build job: 'dist-clean-lynx64' }
         stage('bullet')          { build job: 'bullet-lynx64' }
         stage('ogg')             { build job: 'ogg-lynx64' }
         stage('vorbis')          { build job: 'vorbis-lynx64' }
+        stage('sdl')             { build job: 'sdl-lynx64' }
+        stage('python')          { build job: 'python-lynx64' }
+        stage('blender')         { build job: 'blender-lynx64' }
         stage('panda3d')         { build job: 'panda3d-lynx64' }
         stage('panda3d-kphys')   { build job: 'panda3d-kphys-lynx64' }
         stage('panda3d-krender') { build job: 'panda3d-krender-lynx64' }
@@ -30,7 +132,10 @@
         artifactDaysToKeep: -1
         artifactNumToKeep: -1
     dsl: |
+        stage('dist-clean')      { build job: 'dist-clean-winx64' }
         stage('bullet')          { build job: 'bullet-winx64' }
+        stage('sdl')             { build job: 'sdl-winx64' }
+        stage('python')          { build job: 'python-winx64' }
         stage('panda3d')         { build job: 'panda3d-winx64' }
         stage('panda3d-kphys')   { build job: 'panda3d-kphys-winx64' }
         stage('panda3d-krender') { build job: 'panda3d-krender-winx64' }
