--- a/jenkins-jobs/panda3d-extras.yml
+++ b/jenkins-jobs/panda3d-extras.yml
@@ -22,16 +22,16 @@
             generator: Unix Makefiles
             build-type: Release
             other-arguments: |
-                -DCMAKE_INSTALL_PREFIX=/panda3d-{module}/lib/python3.10/site-packages
+                -DCMAKE_INSTALL_PREFIX=/panda3d-{module}/lib/python{python_version}/site-packages
                 -DBULLET_INCLUDE_DIR=/root/jenkins/workspace/bullet-lynx64/dist/bullet/include
                 -DBULLET_LIBRARY_DIR=/root/jenkins/workspace/bullet-lynx64/dist/bullet/lib
                 -DINSTALL_PY=ON
                 -DPANDA_BINARY_DIR=/root/jenkins/workspace/panda3d-lynx64/dist/panda3d/bin
                 -DPANDA_INCLUDE_DIR=/root/jenkins/workspace/panda3d-lynx64/dist/panda3d/include
                 -DPANDA_LIBRARY_DIR=/root/jenkins/workspace/panda3d-lynx64/dist/panda3d/lib
-                -DPYTHON_INCLUDE_DIR=/root/jenkins/workspace/blender-thirdparty-lynx64/python/include/python3.10
-                -DPYTHON_EXECUTABLE=/root/jenkins/workspace/blender-thirdparty-lynx64/python/bin/python3.10
-                -DPYTHON_LIBRARY=/root/jenkins/workspace/blender-thirdparty-lynx64/python/lib/libpython3.10.a
+                -DPYTHON_INCLUDE_DIR=/root/jenkins/workspace/python-lynx64/dist/python/include/python{python_version}
+                -DPYTHON_EXECUTABLE=/root/jenkins/workspace/python-lynx64/dist/python/bin/python{python_version}
+                -DPYTHON_LIBRARY=/root/jenkins/workspace/python-lynx64/dist/python/lib/libpython{python_version}.so.1.0
             build-tool-invocations:
                 - use-cmake: false
                   arguments: ''
@@ -73,9 +73,9 @@
                 -DPANDA_BINARY_DIR=D:\Jenkins\workspace\panda3d-winx64\dist\panda3d\bin ^
                 -DPANDA_INCLUDE_DIR=D:\Jenkins\workspace\panda3d-winx64\dist\panda3d\include ^
                 -DPANDA_LIBRARY_DIR=D:\Jenkins\workspace\panda3d-winx64\dist\panda3d\lib ^
-                -DPYTHON_INCLUDE_DIR=D:\Jenkins\workspace\blender-thirdparty-winx64\python\310\include ^
-                -DPYTHON_EXECUTABLE=D:\Jenkins\workspace\blender-thirdparty-winx64\python\310\bin\python ^
-                -DPYTHON_LIBRARY=D:\Jenkins\workspace\blender-thirdparty-winx64\python\310\libs\python310.lib ^
+                -DPYTHON_INCLUDE_DIR=D:\Jenkins\workspace\python-winx64\dist\python\include ^
+                -DPYTHON_EXECUTABLE=D:\Jenkins\workspace\python-winx64\dist\python\bin\python ^
+                -DPYTHON_LIBRARY=D:\Jenkins\workspace\python-winx64\dist\python\libs\python{pythonversion}.lib ^
                 ..
 
             if "%ERRORLEVEL%" == "1" (
@@ -95,21 +95,25 @@
     jobs:
         - 'panda3d-{module}-lynx64':
             module: kphys
-            version: 0.5.13
+            version: '0.5.18'
             desc: Physics extensions for Panda3D
+            python_version: '3.10'
         - 'panda3d-{module}-lynx64':
             module: krender
-            version: 0.0.21
+            version: '0.0.23'
             desc: Custom Deferred Render Pipeline for Panda3D
+            python_version: '3.10'
 
 - project:
     name: panda3d-extras-winx64
     jobs:
         - 'panda3d-{module}-winx64':
             module: kphys
-            version: 0.5.13
+            version: '0.5.18'
             desc: Physics extensions for Panda3D
+            pythonversion: '310'
         - 'panda3d-{module}-winx64':
             module: krender
-            version: 0.0.21
+            version: '0.0.23'
             desc: Custom Deferred Render Pipeline for Panda3D
+            pythonversion: '310'
