--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -4,7 +4,8 @@ FROM docker.io/library/ubuntu:22.04
 ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt update -y
-RUN apt install -y git git-lfs subversion kmod sudo wget p7zip-full openjdk-11-jre
+RUN apt install -y \
+    git git-lfs subversion kmod sudo wget imagemagick p7zip-full openjdk-11-jre
 RUN apt install -y \
     build-essential bison cmake patchelf cxxtest gettext linux-libc-dev libusb-1.0-0-dev \
     libcap2-bin libffi-dev libssl-dev libxi6 uuid-dev
@@ -13,7 +14,7 @@ RUN apt install -y \
     g++-mingw-w64 libz-mingw-w64-dev
 RUN apt install -y \
     mesa-common-dev mesa-utils libgl1-mesa-dev libglu1-mesa-dev \
-    libxxf86dga-dev libxxf86vm-dev libxrender-dev libxext-dev
+    libxxf86dga-dev libxxf86vm-dev libxrender-dev libxext-dev libgtk2.0-dev
 RUN apt clean && \
     ln -sf /usr/share/zoneinfo/UTC /etc/localtime && \
     echo UTC > /etc/timezone && \
