--- a/jenkins-jobs/blender.yml
+++ b/jenkins-jobs/blender.yml
@@ -1,4 +1,4 @@
-- job:
+- job-template:
     name: blender-lynx64
     display-name: blender-lynx64
     project-type: freestyle
@@ -24,8 +24,13 @@
             cd build
             cmake -G "Unix Makefiles" \
                 -DCMAKE_BUILD_TYPE=Release \
-                -DCMAKE_INSTALL_PREFIX=/blender/lib/python3.10/site-packages \
+                -DCMAKE_INSTALL_PREFIX=/blender/lib/python{python_version}/site-packages \
                 -DLIBDIR=/root/jenkins/workspace/blender-thirdparty-lynx64 \
+                -DPYTHON_VERSION={python_version} \
+                -DPYTHON_INCLUDE_DIR=/root/jenkins/workspace/python-lynx64/dist/python/include/python{python_version} \
+                -DPYTHON_LIBRARY_DIR=/root/jenkins/workspace/python-lynx64/dist/python/lib \
+                -DSDL_INCLUDE_DIR=/root/jenkins/workspace/sdl-lynx64/dist/sdl/include \
+                -DSDL_LIBRARY_DIR=/root/jenkins/workspace/sdl-lynx64/dist/sdl/lib \
                 -DWITH_AUDASPACE=ON \
                 -DWITH_CODEC_AVI=ON \
                 -DWITH_CODEC_FFMPEG=ON \
@@ -137,3 +142,15 @@
             if "%ERRORLEVEL%" == "1" (
                 exit /B 1
             )
+
+- project:
+    name: blender-lynx64
+    jobs:
+        - 'blender-lynx64':
+            python_version: '3.10'
+
+- project:
+    name: blender-winx64
+    jobs:
+        - 'blender-winx64':
+            python_version: '3.10'
